# vag_air

./: CMakeLists.txt  package.xml
config/: path.yaml  segmentation_params.yaml
launch/: main_launch.py  segmentation_launch.py  spawn_robot.launch.py
meshes/: chassis_link.STL  wheel_holder_link.STL  wheel_holder_link_1.STL  wheel_holder_link_2.STL  wheel_holder_link_3.STL  wheel_link.STL  wheel_link_1.STL  wheel_link_2.STL  wheel_link_3.STL
src/: cam_fusion.py  fuse_cam.cpp  ground_segmentation_node.cpp  path_extraction_node.cpp  single_frame.cpp
urdf/: robot.urdf
