<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vitrox_project</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yujin@todo.todo">yujin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
